# algorithms

./: CMakeLists.txt  first.cpp  linar.cpp  linarpro.cpp  second.cpp  test.cpp  third.cpp  vectors_1.cpp  vectors_2.cpp  vectors_3.cpp
