cmake_minimum_required(VERSION 3.29)
project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(p01 first.cpp)
add_executable(p02 second.cpp)
add_executable(p03 third.cpp)
add_executable(p04 test.cpp)
add_executable(tictactoe linar.cpp)
add_executable(tictactoe52 linarpro.cpp)
add_executable(vector1 vectors_1.cpp)
add_executable(vector2 vectors_2.cpp)
add_executable(vector3 vectors_3.cpp)